[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "spglm"
dynamic = ["version"]
maintainers = [
    {name = "Taylor M. Oshan", email = "tayoshan@gmail.com"},
]
license = {text = "BSD 3-Clause"}
description = "Sparse Generalized Linear Models"
keywords = ["spatial statistics"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
    "libpysal>=4.12",
    "numpy>=1.26",
    "scipy>=1.12",
    "spreg>=1.6",
]

[project.urls]
Home = "https://pysal.org/spglm/"
Repository = "https://github.com/pysal/spglm"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]
docs = [
    "nbsphinx",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx_bootstrap_theme",
]
tests = [
    "codecov",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
all = ["spglm[dev,docs,tests]"]

[tool.setuptools.packages.find]
include = [
    "spglm",
    "spglm.*",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
lint.ignore = [
    "ARG002", # Unused method argument
    "B008",   # Do not perform function call in argument defaults
    "N801",   # Class name should use CapWords convention
    "N802",   # Function name should be lowercase
    "N806",   # Variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"*__init__.py" = [
    "F401",
    "F403",
]

[tool.coverage.run]
source = ["./spglm"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["spglm/tests/*", "spglm/docs/conf.py"]
